# armv7-embedded-rust-rt

./: .travis.yml  Cargo.toml  README.adoc  build.rs
asm/: hard_fault_trampoline.s  msp_r.s
asm/armv6/: msp_w.s
asm/armv7/: cpsid.s  cpsie.s  irq_handler_trampoline.s  primask_read.s
ci/: install.sh
devices/common/: 00_entry.x  10_exceptions.x  20_sections.x  90_handler.x
devices/lm3s6965/: memory.x
devices/templates/: footer.x  header.x
scripts/linker/: link.x.in
src/: bootstrap.rs  exception.rs  interrupt.rs  lib.rs  macros.rs  panic.rs
src/register/: mod.rs  primask.rs
