[package]
name = "rt"
categories = ["embedded", "no-std"]
description = "Minimal runtime for ARM Cortex-M series microcontrollers"
keywords = ["arm", "cortex-m", "runtime"]
version = "0.1.0"
authors = ["Matthias  <wizzk42@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[build-dependencies]
cc = { version = "1.0.25", features = [] }

[dependencies]
bare-metal = { version = "0.2.5", features = [ "const-fn" ] }

[dev-dependencies]
pretty_assertions = "~0.6.1"

[features]
lm3s6965 = []

[badges]
travis-ci = { repository = " wizzk42 / armv7-embedded-rust-rt", branch = "master" }
maintenance = { status = "experimental" }
